Correct according to solution: add gap and no margin and padding

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -20,6 +20,9 @@ ul {
   list-style-type: none;
   display: flex;
   justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
   
   
 }
@@ -30,5 +33,5 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
-  margin: 0 10px;
+  
 }
